src/app/app.css
@font-face {
  font-family: 'PP Neue Montreal Book';
  font-style: normal;
  font-weight: normal;
  src:
    local('PP Neue Montreal Book'),
    url('../../public/fonts/ppneuemontreal-book.woff') format('woff');
}

@font-face {
  font-family: 'PP Neue Montreal Italic';
  font-style: normal;
  font-weight: normal;
  src:
    local('PP Neue Montreal Italic'),
    url('../../public/fonts/ppneuemontreal-italic.woff') format('woff');
}

@font-face {
  font-family: 'PP Neue Montreal Thin';
  font-style: normal;
  font-weight: normal;
  src:
    local('PP Neue Montreal Thin'),
    url('../../public/fonts/ppneuemontreal-thin.woff') format('woff');
}

@font-face {
  font-family: 'PP Neue Montreal Medium';
  font-style: normal;
  font-weight: normal;
  src:
    local('PP Neue Montreal Medium'),
    url('../../public/fonts/ppneuemontreal-medium.woff') format('woff');
}

@font-face {
  font-family: 'PP Neue Montreal SemiBold italic';
  font-style: normal;
  font-weight: normal;
  src:
    local('PP Neue Montreal SemiBold italic'),
    url('../../public/fonts/ppneuemontreal-semibolditalic.woff') format('woff');
}

@font-face {
  font-family: 'PP Neue Montreal Bold';
  font-style: normal;
  font-weight: normal;
  src:
    local('PP Neue Montreal Bold'),
    url('../../public/fonts/ppneuemontreal-bold.woff') format('woff');
}

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

.main {
  background-color: transparent;
  color: #181818;

  display: flex;
  flex-direction: column;
  align-items: center;
}

.logo {
  font-family: 'PP Neue Montreal Bold';
  font-weight: 700;
  font-size: 32px;
  margin: 0px;
  color: #343434;
}

.content {
  width: 800px;

  background-color: #FFFFFF;
  border-radius: 9px;
  padding: 18px;

  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.5);
}

.subtitle {
  font-family: 'PP Neue Montreal Book';
  max-width: 700px;
  text-align: center;
  font-size: 13px;
}

.footer {
  display: flex;
  flex-direction: row;
  gap: 5px;
}

.button {
  width: 150px;
  height: 34px;
  cursor: pointer;

  background-color: transparent;

  border: 2px solid #343434;
  border-radius: 17px;

  font-family: 'PP Neue Montreal Medium';
  font-size: 13px;

  transition-property: background-color, color;
  transition-duration: 0.1s;
}

.button:hover {
  color: #F6F6F6;
  background-color: #343434;
}

.button-primary {
  color: #eeeeee;
  background-color: #346BF5 !important;
  border: none;
}

.button-primary:hover {
  background-color: #2E5CD2 !important;
}

.image {
  height: 350px;
}

